Rename Menu And App Name - 네비게이션 메뉴 및 앱 이름 영어에서 한글로 변경 - 캘린더에서 걷기로 수정

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,10 +7,10 @@
         android:title="@string/menu_home" />
 
     <item
-        android:id="@+id/menu_calendar"
+        android:id="@+id/menu_walking"
         android:enabled="true"
-        android:icon="@drawable/ic_calendar"
-        android:title="@string/menu_calendar" />
+        android:icon="@drawable/ic_walking"
+        android:title="@string/menu_walking" />
 
     <item
         android:id="@+id/menu_setting"
