--- a/app/src/main/res/layout/fragment_walking.xml
+++ b/app/src/main/res/layout/fragment_walking.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CalendarFragment">
+    tools:context=".WalkingFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/menu_calendar" />
+        android:text="@string/menu_walking" />
 
 </FrameLayout>
