Add recordFragment Button - 일일 기록 프래그먼트에서 버튼 추가 - 입력 후 포맷 확인을 위한 버튼

--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -122,15 +122,27 @@
         android:layout_height="200dp"
         android:layout_below="@+id/record_exer"
         android:layout_centerInParent="true"
+        android:background="@drawable/xml_textview_border"
         android:padding="10dp"
         android:text="@string/record_write"
         android:textSize="20sp" />
 
     <Button
         android:id="@+id/record_write_btn"
-        android:layout_width="400dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/record_final_write"
-        android:layout_centerInParent="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:text="@string/record_write_btn" />
+
+    <Button
+        android:id="@+id/record_save_btn"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/record_final_write"
+        android:layout_marginEnd="15dp"
+        android:layout_toEndOf="@+id/record_write_btn"
+        android:padding="5dp"
+        android:text="@string/record_save_btn" />
 </RelativeLayout>
