--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,8 @@
     <!-- custom color -->
     <color name="grey">#FFD3D3D3</color>
     <color name="green">#FF008000</color>
+    <color name="yellow_green">#FF9ACD32</color>
+    <color name="olive">#FF808000</color>
+    <color name="dark_olive_green">#FF556B2F</color>
     <color name="edit_hint">#757575</color>
 </resources>
