--- a/app/src/main/res/layout/fragment_walking.xml
+++ b/app/src/main/res/layout/fragment_walking.xml
@@ -3,12 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context=".WalkingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/menu_walking" />
+        android:layout_height="50dp"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/walking_count_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:paddingStart="1dp"
+            android:paddingEnd="10dp"
+            android:text="@string/walking_count_tag"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/walking_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/walking_count_tag"
+            android:text="@string/walking_count"
+            android:textSize="20sp" />
+    </RelativeLayout>
 </FrameLayout>
